# rounal

./: Cargo.toml  LICENSE  README.md  app_config.toml
.github/workflows/: build-deb.yml  rust.yml
src/: app.rs  app_config.toml  error.rs  journal.rs  lib.rs  main.rs  system.rs  ui.rs  util.rs
src/core/: app.rs  clipboard.rs  config.rs  error.rs  handler.rs  input_handler.rs  journal.rs  mod.rs  system.rs
src/ui/: layouts.rs  mod.rs  styles.rs  ui.rs
