[package]
name = "rounal"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = "0.28.1"
log = "0.4.25"
ratatui = "0.29.0"
serde = {version = "1.0.216", features = ["derive"]}
serde_json = "1.0.134"
simple-logging = "2.0.2"
thiserror = "2.0.10"
tokio = {version = "1.42.0", features = ["full"]}
toml = "0.8.20"
